2014-12-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Some further inline function rationalization.

	* include/io.h (_CRTALIAS): Replace all references...
	(__CRT_ALIAS): ...using this syntactically preferred form.
	(lseek64): Specify __JMPSTUB__ semantics for extern implementation.
	[__cplusplus] (_BEGIN_C_DECLS, _END_C_DECLS): Use these.

	* include/unistd.h (ftruncate): Specify __JMPSTUB__ semantics.
	[__cplusplus] (_BEGIN_C_DECLS, _END_C_DECLS): Use these.

	* mingwex/stdio/lseek64.c: File is now redundant; delete it.
	* mingwex/ftruncate.c: Likewise.

	* Makefile.in (libmingwex.a): Delete obsolete dependencies on...
	(lseek64.$OBJEXT, ftruncate.$OBJEXT): ...these.

2014-12-13  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Some POSIX feature test adjustments.

	* include/stdlib.h (mkstemp): Available since SUSv3, so requires...
	[_POSIX_C_SOURCE >= 200112L]: ...this minimum level of POSIX support.
	(mkdtemp): This didn't become available until SUSv4, so requires...
	[_POSIX_C_SOURCE >= 200809L]: ...this increased feature level.

2014-12-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Another CRT_INLINE function implementation rationalization.

	* include/inttypes.h (imaxabs): Specify as __LIBIMPL__; declare...
	(llabs): ...this, to be implemented as its __LIBIMPL__ alias.
	[__cplusplus] (_BEGIN_C_DECLS, _END_C_DECLS): Use these.

	* Makefile.in (libimpl_sed_script): Handle ALIAS attribute.
	(libmingwex.a): Delete obsolete dependency on...
	(imaxabs.$OBJEXT): ...this.

	* mingwex/imaxabs.c: File is now redundant; delete it.

2014-12-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	More rationalization of CRT_INLINE function implementations.

	* include/stdio.h (fopen64): Add __JMPSTUP__ specification.
	(ftello64): Add __LIBIMPL__ specification for extern implementation.
	[__cplusplus] (_BEGIN_C_DECLS, _END_C_DECLS): Use these.

	* mingwex/stdio/fopen64.c: File is now redundant; delete it.